--- a/IceClient/pom.xml
+++ b/IceClient/pom.xml
@@ -21,6 +21,10 @@
             <groupId>com.zeroc</groupId>
             <artifactId>ice</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.zeroc</groupId>
+            <artifactId>icebox</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
