--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java-version>1.8</java-version>
+        <log4j.version>1.2.17</log4j.version>
+        <slf4j.version>1.7.7</slf4j.version>
+        <logback.version>1.1.7</logback.version>
+        <lombok.version>1.16.18</lombok.version>
+        <logback-ext-spring>0.1.1</logback-ext-spring>
+        <jboss-logging.version>3.3.0.Final</jboss-logging.version>
+        <zeroc-ice.version>3.6.4</zeroc-ice.version>
     </properties>
 
     <dependencyManagement>
@@ -25,7 +32,87 @@
             <dependency>
                 <groupId>com.zeroc</groupId>
                 <artifactId>ice</artifactId>
-                <version>3.6.4</version>
+                <version>${zeroc-ice.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/com.zeroc/icebox -->
+            <dependency>
+                <groupId>com.zeroc</groupId>
+                <artifactId>icebox</artifactId>
+                <version>${zeroc-ice.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/com.zeroc/icegrid -->
+            <dependency>
+                <groupId>com.zeroc</groupId>
+                <artifactId>icegrid</artifactId>
+                <version>${zeroc-ice.version}</version>
+            </dependency>
+            <!--日志 工具 -->
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <!-- 适配 commons-logging -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl-over-slf4j</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <!-- 适配 java.util.logging -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jul-to-slf4j</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <!-- 适配 log4j -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>log4j-over-slf4j</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-jdk14</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <!-- logback -->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+            <!-- Spring MVC集成slf4j-logback -->
+            <dependency>
+                <groupId>org.logback-extensions</groupId>
+                <artifactId>logback-ext-spring</artifactId>
+                <version>${logback-ext-spring}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.logging</groupId>
+                <artifactId>jboss-logging</artifactId>
+                <version>${jboss-logging.version}</version>
+            </dependency>
+            <!-- lombok插件 -->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
