1.使用springboot 启动server 2.创建IceGridServer作为IceGride启动的入口

--- a/IceClient/pom.xml
+++ b/IceClient/pom.xml
@@ -13,6 +13,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.txmd</groupId>
             <artifactId>interfaces</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -24,6 +28,18 @@
         <dependency>
             <groupId>com.zeroc</groupId>
             <artifactId>icebox</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
         </dependency>
     </dependencies>
 
