--- a/IceServer/src/main/resources/config.properties
+++ b/IceServer/src/main/resources/config.properties
@@ -40,7 +40,7 @@ IceBox.UseSharedCommunicator.OnlineBook=1
 IceBox.UseSharedCommunicator.SMSService=1
 
 #############################Ice registry
-Ice.Default.Locator=IceGrid/Locator:tcp -h localhost -p 4061
-OnlineBook.AdapterId=OnlineBookAdapter
-SMSService.AdapterId=SMSServicesAdapter
+#Ice.Default.Locator=IceGrid/Locator:tcp -h localhost -p 4061
+#OnlineBook.AdapterId=OnlineBookAdapter
+#SMSService.AdapterId=SMSServicesAdapter
 
