--- a/IceServer/src/main/resources/config.properties
+++ b/IceServer/src/main/resources/config.properties
@@ -33,14 +33,14 @@ IceBox.Service.SMSService=com.txmd.service.SMSServiceI prop1=1 prop2=2 prop3=3
 SMSService.Endpoints=tcp -p 10001 -h localhost
 #############################Service define end
 
-#############################service load order
+#############################service load order ¼Ì³ÐIceBox.Service
 IceBox.LoadOrder=OnlineBook,SMSService
 #############################service share Communicator
 IceBox.UseSharedCommunicator.OnlineBook=1
 IceBox.UseSharedCommunicator.SMSService=1
 
 #############################Ice registry
-#Ice.Default.Locator=IceGrid/Locator:tcp -h localhost -p 4061
-#OnlineBook.AdapterId=OnlineBookAdapter
-#SMSService.AdapterId=SMSServicesAdapter
+Ice.Default.Locator=IceGrid/Locator:tcp -h localhost -p 4061
+OnlineBook.AdapterId=OnlineBookAdapter
+SMSService.AdapterId=SMSServicesAdapter
 
